# devtale

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  action.yml  cli.py  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: publish.yaml
dev_tales/: schema.py  templates.py  utils.py
devtale/: cli.py  constants.py  schema.py  templates.py  utils.py
devtale/aggregators/: __init__.py  go.py  javascript.py  php.py  python.py
devtale/aggregators/scripts/: document_python.py
scripts/: document_go.py  document_javascript.py  document_php.py  document_python.py
